resolved individual VariableDeclarator rather than FieldDeclaration.